@@ -11,3 +11,4 @@
 20260108 ./var/www/cjdns/hia/watchlist/hia-parse-cifs.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/hia-parse-dns.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/hia-parse-ftp.sh added.
+20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http.sh added.
